# simple_draw_gl

./: CMakeLists.txt  README.md
simple_draw_gl/: CMakeLists.txt
simple_draw_gl/include/simple_draw_gl/: check_gl_error.h  imgui_gl.h  version.h
simple_draw_gl/include/simple_draw_gl/cameras/: camera.h  camera_projection_interface.h  camera_view_interface.h  cameras.h  first_person_view.h  look_at_view.h  orbital_view.h  perspective_projection.h
simple_draw_gl/include/simple_draw_gl/drawing/: cube.h  drawable.h  grid.h
simple_draw_gl/include/simple_draw_gl/shader/: default_program.h  default_shaders.h  program.h  program_uniform.h  replace_string.h  shader.h
simple_draw_gl/src/: check_gl_error.cpp
simple_draw_gl/src/shader/: default_shaders.cpp  replace_string.cpp
